--- a/infra/kubernetes/base/manager-q/deployment.yaml
+++ b/infra/kubernetes/base/manager-q/deployment.yaml
@@ -42,7 +42,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: manager-q
-        image: your-registry/manager-q:latest
+        image: 192.168.67.2:5000/manager-q:latest
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
