--- a/infra/kubernetes/base/agentq/deployment.yaml
+++ b/infra/kubernetes/base/agentq/deployment.yaml
@@ -40,7 +40,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: agentq
-        image: your-registry/agentq:latest
+        image: 192.168.67.2:5000/agentq:latest
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
@@ -212,7 +212,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: agentq-devops
-        image: your-registry/agentq:latest
+        image: 192.168.67.2:5000/agentq:latest
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
@@ -391,7 +391,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: agentq-data-analyst
-        image: your-registry/agentq:latest
+        image: 192.168.67.2:5000/agentq:latest
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
