--- a/infra/kubernetes/base/integrationhub/deployment.yaml
+++ b/infra/kubernetes/base/integrationhub/deployment.yaml
@@ -39,7 +39,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: integrationhub
-        image: your-registry/integrationhub:latest
+        image: 192.168.67.2:5000/integrationhub:latest
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
