--- a/infra/kubernetes/base/knowledgegraphq/deployment.yaml
+++ b/infra/kubernetes/base/knowledgegraphq/deployment.yaml
@@ -39,7 +39,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: knowledgegraphq
-        image: your-registry/knowledgegraphq:latest
+        image: 192.168.67.2:5000/knowledgegraphq:latest
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
