--- a/infra/kubernetes/base/quantumpulse/api-deployment.yaml
+++ b/infra/kubernetes/base/quantumpulse/api-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: quantumpulse-api
-        image: your-registry/quantumpulse-api:latest
+        image: 192.168.67.2:5000/quantumpulse-api:latest
         ports:
         - containerPort: 8000
         env:
