--- a/infra/kubernetes/base/vectorstoreq/deployment.yaml
+++ b/infra/kubernetes/base/vectorstoreq/deployment.yaml
@@ -39,7 +39,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: vectorstoreq
-        image: your-registry/vectorstoreq:latest
+        image: 192.168.67.2:5000/vectorstoreq:latest
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
